--- a/projects/main.css
+++ b/projects/main.css
@@ -1,3 +1,10 @@
 body {
     background-color: green;
   }
+  * {
+    box-sizing: border-box;
+  }
+  body {
+    background-color: green;
+    font-size: 24px;
+  }
